assets/css/sticky-footer-navbar.css
/* Sticky footer styles
-------------------------------------------------- */
html {
  position: relative;
  min-height: 100%;
}

body {
  /* Margin bottom by footer height */
  margin-bottom: 20%;
}
.footer {
  position: absolute;
  width: 102%;
  /* Set the fixed height of the footer here */
  height: 100px;
  padding-top: 2%;
  background-color: #222222;
  bottom: -200px;
  padding: 1 1 1 1;
  right: -0.49999px;
  }

